datofix svp, i håp om at den ikke feiler igjen